[gd_scene load_steps=8 format=3 uid="uid://yjovgpa36rd6"]

[ext_resource type="Texture2D" uid="uid://dju2mt3woe76t" path="res://assets/images/desktop-wallpaper-circuit-minimalist-backgrounds-minimal-portrait-dark.jpg" id="1_dsjro"]
[ext_resource type="Script" path="res://ui/game_options.gd" id="1_yamss"]
[ext_resource type="FontFile" uid="uid://vd8d4wjqvjru" path="res://assets/images/BeautifulPoliceOfficer-rvv8x.ttf" id="2_2254h"]
[ext_resource type="FontFile" uid="uid://c1xbiljmbigao" path="res://assets/Godofthunder-0WO1P.ttf" id="4_bcyvw"]
[ext_resource type="AudioStream" uid="uid://drnyxowj6w4c8" path="res://assets/audio/game-music-loop-1-143979.mp3" id="5_4uewv"]
[ext_resource type="AudioStream" uid="uid://6rmfjehbom3o" path="res://assets/audio/Enter & Back.mp3" id="5_cj4po"]
[ext_resource type="PackedScene" uid="uid://cbt0agvdyqb2g" path="res://scenes/bg_sfx.tscn" id="6_emcub"]

[node name="GameOptions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yamss")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("1_dsjro")

[node name="game options" type="Label" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 21.0
offset_right = 316.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("2_2254h")
theme_override_font_sizes/font_size = 57
text = "GAME OPTIONS:"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 329.0
offset_top = 107.0
offset_right = 392.0
offset_bottom = 130.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2254h")
theme_override_font_sizes/font_size = 32
text = "MAX SCORE:"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
alignment = 1

[node name="Save & Back" type="Button" parent="."]
layout_mode = 0
offset_left = 544.0
offset_top = 535.0
offset_right = 845.0
offset_bottom = 602.0
theme_override_fonts/font = ExtResource("2_2254h")
theme_override_font_sizes/font_size = 57
text = "SAVE AND BACK"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 387.0
offset_top = 213.0
offset_right = 572.0
offset_bottom = 253.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2254h")
theme_override_font_sizes/font_size = 32
text = "GAME TYPE"

[node name="game_type" type="Button" parent="VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("4_bcyvw")
text = "PLAYER"

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 476.0
offset_top = 251.0
offset_right = 920.0
offset_bottom = 527.0
theme_override_constants/separation = 10

[node name="Difficulty" type="Label" parent="VBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_bcyvw")
theme_override_font_sizes/font_size = 27
text = "Difficulty:"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4

[node name="easy" type="Button" parent="VBoxContainer3/HBoxContainer3"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "EASY"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4

[node name="medium" type="Button" parent="VBoxContainer3/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_bcyvw")
text = "MEDIUM"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4

[node name="hard" type="Button" parent="VBoxContainer3/HBoxContainer2"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_bcyvw")
text = "HARD"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4

[node name="insane" type="Button" parent="VBoxContainer3/HBoxContainer4"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_bcyvw")
text = "INSANE"

[node name="sfx_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_cj4po")

[node name="BgSfx" parent="." instance=ExtResource("6_emcub")]

[node name="background_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_4uewv")
volume_db = -80.0
autoplay = true

[connection signal="changed" from="VBoxContainer/HBoxContainer/SpinBox" to="." method="_on_spin_box_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/SpinBox" to="." method="_on_spinbox_value_changed"]
[connection signal="pressed" from="Save & Back" to="." method="_on_save__back_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/game_type" to="." method="_on_game_type_pressed"]
[connection signal="pressed" from="VBoxContainer3/HBoxContainer3/easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="VBoxContainer3/HBoxContainer/medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="VBoxContainer3/HBoxContainer2/hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="VBoxContainer3/HBoxContainer4/insane" to="." method="_on_insane_pressed"]
[connection signal="finished" from="sfx_click" to="." method="_on_sfx_click_finished"]
